--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,46 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Base_android_app" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Architecture_sample" parent="Theme.Material3.DayNight.NoActionBar">
     </style>
 
-    <style name="Theme.Base_android_app" parent="Base.Theme.Base_android_app" />
+    <style name="Theme.Architecture_sample" parent="Base.Theme.Architecture_sample" />
+
+    <style name="rl_feature_style">
+        <item name="android:layout_width">75dp</item>
+        <item name="android:layout_height">75dp</item>
+        <item name="android:background">@drawable/bg_20dp_stroke_rounded_white</item>
+    </style>
+
+    <style name="tv_feature_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:fontFamily">@font/poppins_medium</item>
+        <item name="android:textSize">10sp</item>
+        <item name="android:textColor">#7D8BB7</item>
+    </style>
+
+    <style name="edt_add_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:foreground">@drawable/bg_4dp_stroke_rounded_black</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:textColorHint">#979797</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/poppins_regular</item>
+    </style>
+
+    <style name="dialog_anim" parent="@android:style/Theme.Dialog">
+        <item name="android:windowAnimationStyle">@style/bottom_sheet_dialog_anim</item>
+    </style>
+
+    <style name="bottom_sheet_dialog_anim">
+        <item name="android:windowEnterAnimation">@anim/slide_up_anim</item>
+        <item name="android:windowExitAnimation">@anim/slide_down_anim</item>
+    </style>
 </resources>
